2011-01-26  Marcus Mueller  <znek@mulle-kybernetik.com>

	* removed outdated FUSEObjC-GNUstep subproject

	* FUSEOFS is an svn:external now

2010-12-22  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.2.0

	* iTunesFileSystem.m: only show AlbumsTrackFormat.txt if new
	  'ShowFormatFiles' default is YES and 'UseCategories' is YES

	* iTunesFormatFile.m: ignore lines starting with '#' altogether

	* iTunesPlaylist.m: use new 'ShowFormatFiles' default

	* v1.2.0b1

	* NSObject+FUSEOFS.[hm]: changed layout and renamed every wording of
	  'directory' into 'container'.

	* iTunesFileSystem.m, iTunesLibrary.m, iTunesPlaylist.m,
	  FUSEObjectFileSystem.m, FUSEOFSFileProxy.m, FUSEOFSMemoryFile.m,
	  FUSEOFSMemoryObject.m

	* FUSEOFSMemoryFolder.[hm]: renamed to FUSEOFSMemoryContainer

	* FUSEOFSMemoryContainer.[hm]: see above

	* FUSEObjectFileSystem.m: minor fix for valueOfExtendedAttribute:...

	* iTunesFileSystem.[hm]: implemented 'AlbumsTrackFormat.txt' and
	  'PlaylistsTrackFormat.txt' for global default manipulation

	* iTunesFormatFile.m: bugfixes

	* iTunesLibrary.m: removed caching of albumsTrackFormat, which can
	  change during runtime. Some code cleanup.

	* English.lproj/AlbumsTrackFormat.txt: help text added

2010-12-21  Marcus Mueller  <znek@mulle-kybernetik.com>

	* FUSEObjectFileSystem.m: added workaround for a MacFUSE bug which
	  prevented deleting extended attributes - this triggers an annoying
	  warning upon startup (we're implementing a deprecated method) which
	  is totally harmless.

	* v1.1.14b5

	* English.lproj/PlaylistsTrackFormat.txt: Help text for use in
	  iTunesFormatFile, giving examples for a quick headstart

	* iTunesFormatFile.m: loads help text from a localizable file now.
	  Lazyfied setup, added support for hinting at used text encoding
	  via 'com.apple.TextEncoding' extended attribute.

	* NSObject+FUSEOFS.[hm]: added api for dealing with extended
	  attributes
