@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2007-2010, Marcus Müller <znek@mulle-kybernetik.com>.
+  Copyright (c) 2007-2011, Marcus Müller <znek@mulle-kybernetik.com>.
   All rights reserved.
 
 
@@ -34,6 +34,7 @@
 #import "iPodLibrary.h"
 #import <AppKit/AppKit.h>
 #import "NSString+Extensions.h"
+#import "NSString+FUSEOFS.h"
 #import "iTunesPlaylist.h"
 #import "iTunesTrack.h"
 #import "NSImage+IconData.h"
