@@ -8,6 +8,7 @@
 
 /* Begin PBXBuildFile section */
 		7F74EF2D0B4C1BEC00CFA0C0 /* iTunesFileSystem.m in Sources */ = {isa = PBXBuildFile; fileRef = 7F74EF2C0B4C1BEC00CFA0C0 /* iTunesFileSystem.m */; };
+		AD0073DF12F0161C00E05C0D /* NSString+FUSEOFS.m in Sources */ = {isa = PBXBuildFile; fileRef = AD0073DE12F0161C00E05C0D /* NSString+FUSEOFS.m */; };
 		AD0666410D86FC4F0095EDEF /* MacFUSE.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = AD0666400D86FC4F0095EDEF /* MacFUSE.framework */; };
 		AD0667BE0D870A7A0095EDEF /* Cocoa.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = AD0667BD0D870A7A0095EDEF /* Cocoa.framework */; };
 		AD0667DF0D870B520095EDEF /* main.m in Sources */ = {isa = PBXBuildFile; fileRef = AD0667DE0D870B520095EDEF /* main.m */; };
@@ -46,6 +47,9 @@
 		7F3DBD070B4422C200A48059 /* Info.plist */ = {isa = PBXFileReference; lastKnownFileType = text.plist.xml; path = Info.plist; sourceTree = "<group>"; };
 		7F74EF2B0B4C1BEC00CFA0C0 /* iTunesFileSystem.h */ = {isa = PBXFileReference; fileEncoding = 4; indentWidth = 2; lastKnownFileType = sourcecode.c.h; path = iTunesFileSystem.h; sourceTree = "<group>"; tabWidth = 2; usesTabs = 0; };
 		7F74EF2C0B4C1BEC00CFA0C0 /* iTunesFileSystem.m */ = {isa = PBXFileReference; fileEncoding = 4; indentWidth = 2; lastKnownFileType = sourcecode.c.objc; path = iTunesFileSystem.m; sourceTree = "<group>"; tabWidth = 2; usesTabs = 0; };
+		AD0073DC12F0131500E05C0D /* ChangeLog */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = ChangeLog; sourceTree = "<group>"; };
+		AD0073DD12F0161C00E05C0D /* NSString+FUSEOFS.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = "NSString+FUSEOFS.h"; sourceTree = "<group>"; };
+		AD0073DE12F0161C00E05C0D /* NSString+FUSEOFS.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = "NSString+FUSEOFS.m"; sourceTree = "<group>"; };
 		AD0666400D86FC4F0095EDEF /* MacFUSE.framework */ = {isa = PBXFileReference; lastKnownFileType = wrapper.framework; name = MacFUSE.framework; path = /Library/Frameworks/MacFUSE.framework; sourceTree = "<absolute>"; };
 		AD0667A60D87023C0095EDEF /* iTunesFSController.h */ = {isa = PBXFileReference; fileEncoding = 4; indentWidth = 2; lastKnownFileType = sourcecode.c.h; path = iTunesFSController.h; sourceTree = "<group>"; tabWidth = 2; usesTabs = 0; };
 		AD0667A70D87023C0095EDEF /* iTunesFSController.m */ = {isa = PBXFileReference; fileEncoding = 4; indentWidth = 2; lastKnownFileType = sourcecode.c.objc; path = iTunesFSController.m; sourceTree = "<group>"; tabWidth = 2; usesTabs = 0; };
@@ -226,8 +230,11 @@
 		AD20DC1E0C25AD9D00DB2A42 /* FUSEOFS */ = {
 			isa = PBXGroup;
 			children = (
+				AD0073DC12F0131500E05C0D /* ChangeLog */,
 				AD5B5E7A0C0C1A70003B1650 /* NSObject+FUSEOFS.h */,
 				AD5B5E7B0C0C1A70003B1650 /* NSObject+FUSEOFS.m */,
+				AD0073DD12F0161C00E05C0D /* NSString+FUSEOFS.h */,
+				AD0073DE12F0161C00E05C0D /* NSString+FUSEOFS.m */,
 				AD20DB510C259F6F00DB2A42 /* FUSEObjectFileSystem.h */,
 				AD20DB520C259F6F00DB2A42 /* FUSEObjectFileSystem.m */,
 				AD81196E0F095144000786C9 /* FUSEOFSLookupContext.h */,
@@ -422,6 +429,7 @@
 				AD6A7CA212BFB0D50038FF7E /* FUSEOFSMemoryFile.m in Sources */,
 				AD6A7DB912C0BB770038FF7E /* iTunesFormatFile.m in Sources */,
 				AD6A80D312C146D40038FF7E /* FUSEOFSMemoryObject.m in Sources */,
+				AD0073DF12F0161C00E05C0D /* NSString+FUSEOFS.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
