@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2007-2010, Marcus Müller <znek@mulle-kybernetik.com>.
+  Copyright (c) 2007-2011, Marcus Müller <znek@mulle-kybernetik.com>.
   All rights reserved.
 
 
@@ -40,6 +40,7 @@
 #import "NSObject+FUSEOFS.h"
 #import "iTunesFSFormatter.h"
 #import "NSImage+IconData.h"
+#import "NSString+FUSEOFS.h"
 
 @implementation iTunesLibrary
 
