@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2007-2010, Marcus Müller <znek@mulle-kybernetik.com>.
+  Copyright (c) 2007-2011, Marcus Müller <znek@mulle-kybernetik.com>.
   All rights reserved.
 
 
@@ -32,7 +32,7 @@
 
 #import "common.h"
 #import "iTunesTrack.h"
-#import "NSString+Extensions.h"
+#import "NSString+FUSEOFS.h"
 #import "NSURL+Extensions.h"
 
 @interface iTunesTrack (Private)
